--- a/templates/update.html
+++ b/templates/update.html
@@ -1,19 +1,55 @@
-{% if sucesso %}
-      <p>Registro editado com sucesso!</p>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
 
-      <h2>Editar Registo</h2>
-  
-      <form class="form" method="POST">
-          <label for="nome">Nome:</label>
-          <input type="text" id="nome" name="nome" value="{{receita.nome}}" />
+<head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Atualizar</title>
+      <link rel="stylesheet" href="/static/styles.css">
+</head>
 
-        
-          <label for="imagem_url">URL da Imagem:</label>
-          <input type="text" id="imagem_url" name="imagem_url" value="{{ receita.imagem_url }}" />
-        
-          <label for="video_url">URL do video:</label>
-          <input type="text" id="video_url" name="video_url" value="{{ receita.video_url }}" />
-        
-          <input type="submit" class="botao" value="Enviar" />
-        </form>
+<body>
+      {% include '/includes/cabecalho.html' %}
+      <div class="container">
+      {% if sucesso %}
+      <p>Receita atualizada com sucesso!</p>
+      {% endif %}
+      <div class="formulario flex justify-center centered column spaced">
+                  <h2 class="spaced">Atualizar Receita</h2>
+                <form class="form spaced" method="POST">
+                    <div class='spaced'>
+                        <label for="nome">Nome:</label>
+                        <input class='inputEstilizado' type="text" id="nome" name="nome" required>
+                    </div>
+                    <div class='spaced'>
+                        <label for="imagem_url">URL da Imagem:</label>
+                        <input class='inputEstilizado' type="text" id="imagem_url" name="imagem_url" required>
+                    </div>
+                    <div class='spaced'>
+                        <label for="video_url">URL do video:</label>
+                        <input class='inputEstilizado' type="text" id="video_url" name="video_url" required>
+                    </div>
+                    <div class='spaced'>
+                        <label for="ingredientes">Ingredientes:</label>
+                        <textarea class='inputEstilizado' id="ingredientes" name="ingredientes"
+                            placeholder="Digite os ingredientes separados por vírgula."> </textarea>
+                    </div>
+                    <label for="tipo" class='spaced'>Escolha a categoria:</label>
+                    <select id="tipo" name="tipo">
+                        <option value="Bolos e Tortas">Bolos e Tortas</option>
+                        <option value="Carnes">Carnes</option>
+                        <option value="Saladas e Molhos">Saladas e Molhos</option>
+                        <option value="Sopas">Sopas</option>
+                        <option value="Massas">Massas</option>
+                        <option value="Saudável">Saudável</option>
+                        <option value="Outros">Outros</option>
+                    </select>
+                    <div class="tta spaced"><input type="submit" class="botao" value="Enviar"></div>
+                </form>
+            </div>
+        </div>
+      {% include '/includes/rodape.html' %}
+</body>
+
+</html>
