--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -14,8 +14,12 @@
 
     <div class="container">
         {% if id_atribuido %}
-        <p>Receita cadastrada com id:{{id_atribuido}}</p>
-        <a href="/{{ id_atribuido}}" class="botao">Visualizar Receita</a>
+        <div class="formulario flex justify-center centered column spaced vh-90">
+            <div>
+                <p class="spaced">Receita cadastrada com id:{{id_atribuido}}</p>
+                <a class="spaced" href="/{{ id_atribuido}}" class="botao">Visualizar Receita</a>
+            </div>
+        </div>
         {% else %}
 
         <div class="formulario flex justify-center centered column spaced">
