--- a/templates/por_categoria.html
+++ b/templates/por_categoria.html
@@ -12,21 +12,30 @@
 <body>
     {% include 'includes/cabecalho.html' %}
 
-    <div class="container flex justify-between centered column wrap">
-        {% for receita in receitas %}
-        <section class="flex column spaced">
-            <div class="card">
-                <div class="imagem">
-                    <a href="/{{receita.id}}">
-                        <img src="{{receita.imagem_url}}" alt="{{receita.nome}}">
-                    </a>
-                    <a class="texto" href="/{{receita.id}}">
-                        <h1>{{receita.nome}}</h1>
-                    </a>
+    <div class="flex spaced justify-center wrap">
+        {% include 'includes/sidebar.html' %}
+        <div class="flex centered column wrap">
+            {% for receita in receitas %}
+            {% if receita %}
+            <section class="flex column spaced">
+                <div class="card">
+                    <div class="imagem">
+                        <a href="/{{receita.id}}">
+                            <img src="{{receita.imagem_url}}" alt="{{receita.nome}}">
+                        </a>
+                        <a class="texto" href="/{{receita.id}}">
+                            <h1>{{receita.nome}}</h1>
+                        </a>
+                    </div>
                 </div>
+            </section>
+            {%endif%}
+            {%else%}
+            <div class="flex column spaced min-card">
+                <p class="spaced">Nenhuma Receita Encontrada.</p>
             </div>
-        </section>
-        {%endfor%}
+            {%endfor%}
+        </div>
     </div>
 
 
