--- a/templates/includes/cabecalho.html
+++ b/templates/includes/cabecalho.html
@@ -9,5 +9,8 @@
             <a href="/">Home</a>
             <a href="/cadastrar">Cadastrar</a>
         </nav>
+        <div class="hiddenNav">
+            <a>Menu</a>
+        </div>
     </div>
 </header>
