--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar spaced">
+<div id='sidebar' class="sidebar spaced">
     <div><a href="/categoria/Bolos e Tortas">Bolos e Tortas</a></div>
     <div><a href="/categoria/Carnes">Carnes</a></div>
     <div><a href="/categoria/Saladas e Molhos">Saladas e Molhos</a></div>
