--- a/templates/delete.html
+++ b/templates/delete.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deletar</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <script src="/static/moveSidebar.js" defer></script>
 </head>
 <body>
     {% include 'includes/cabecalho.html' %}
