--- a/templates/exibir_detalhe.html
+++ b/templates/exibir_detalhe.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exibir Detalhes</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <script src="/static/moveSidebar.js" defer></script>
     {%if receita.ingredientes %}
     <script src='static/listar_ingredientes.js' defer></script> {% endif %}
 </head>
