[FIX] Stuck menu

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,4 +1,6 @@
 <div id='sidebar' class="sidebar spaced">
+    <div class="hiddenNav"><a href="/">Home</a></div>
+    <div class="hiddenNav specialNav"><a href="/cadastrar">Cadastrar</a></div>
     <div><a href="/categoria/Bolos e Tortas">Bolos e Tortas</a></div>
     <div><a href="/categoria/Carnes">Carnes</a></div>
     <div><a href="/categoria/Saladas e Molhos">Saladas e Molhos</a></div>
@@ -6,4 +8,5 @@
     <div><a href="/categoria/Massas">Massas</a></div>
     <div><a href="/categoria/Saudável">Saudável</a></div>
     <div><a href="/categoria/Outros">Outros</a></div>
+    
 </div>
