--- a/templates/update.html
+++ b/templates/update.html
@@ -18,7 +18,7 @@
       {% endif %}
       <div class="formulario flex justify-center centered column spaced">
                   <h2 class="spaced">Atualizar Receita</h2>
-                <form class="form spaced" method="POST">
+                <form class="form spaced flex column wrap" method="POST">
                     <div class='spaced'>
                         <label for="nome">Nome:</label>
                         <input class='inputEstilizado' type="text" id="nome" name="nome" required>
