--- a/templates/exibir_detalhe.html
+++ b/templates/exibir_detalhe.html
@@ -15,23 +15,26 @@
 <body>
     {% include '/includes/cabecalho.html' %}
 
-    <div class="flex justify-between centered column">
-        <div class="spaced">
-            <h1>{{receita.nome}}</h1>
-            <p>Categoria: <a href='/categoria/{{receita.tipo}}'>{{receita.tipo}}</a></p>
-        </div>
-        <div class="video spaced">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/{{receita.video_url}}"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div class="ingredients">
-            {{receita.ingredientes}}
-        </div>
-        <div class="spaced row">
-            <a class='botao' href='/delete/{{receita.id}}'>Delete</a>
-            <a class='botao' href='/update/{{receita.id}}'>Atualizar</a>
+    <div class="flex spaced justify-center wrap">
+        {% include 'includes/sidebar.html' %}
+        <div class="flex centered column wrap">
+            <div class="spaced">
+                <h1>{{receita.nome}}</h1>
+                <p>Categoria: <a href='/categoria/{{receita.tipo}}'>{{receita.tipo}}</a></p>
+            </div>
+            <div class="video spaced">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/{{receita.video_url}}"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="ingredients">
+                {{receita.ingredientes}}
+            </div>
+            <div class="spaced row">
+                <a class='botao' href='/delete/{{receita.id}}'>Delete</a>
+                <a class='botao' href='/update/{{receita.id}}'>Atualizar</a>
+            </div>
         </div>
     </div>
 
