[FIX] Added placeholder for video url

--- a/templates/update.html
+++ b/templates/update.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class='spaced'>
                         <label for="video_url">URL do video:</label>
-                        <input class='inputEstilizado' type="text" id="video_url" name="video_url" required>
+                        <input class='inputEstilizado' placeholder='Utilizen apenas o TOKEN. Ex: "jBzwzrDvZ18"' type="text" id="video_url" name="video_url" required>
                     </div>
                     <div class='spaced'>
                         <label for="ingredientes">Ingredientes:</label>
