[Remove] url_for

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class='spaced'>
                     <label for="video_url">URL do video:</label>
-                    <input class='inputEstilizado' placeholder='Utilizen apenas o TOKEN. Ex: "jBzwzrDvZ18"' type="text" id="video_url" name="video_url" required>
+                    <input class='inputEstilizado' placeholder='Utilize apenas o TOKEN. Ex: "jBzwzrDvZ18"' type="text" id="video_url" name="video_url" required>
                 </div>
                 <div class='spaced'>
                     <label for="ingredientes">Ingredientes:</label>
