--- a/templates/exibir_detalhe.html
+++ b/templates/exibir_detalhe.html
@@ -28,6 +28,9 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
+            <div class="spaced">
+                <p>Principais Ingredientes:</p>
+            </div>
             <div class="ingredients">
                 {{receita.ingredientes}}
             </div>
