--- a/templates/exibir_detalhe.html
+++ b/templates/exibir_detalhe.html
@@ -29,7 +29,7 @@
                     allowfullscreen></iframe>
             </div>
             <div class="spaced">
-                <p>Principais Ingredientes:</p>
+                <h3>Principais Ingredientes:</h3>
             </div>
             <div class="ingredients">
                 {{receita.ingredientes}}
